src/test/ui/hr-subtype/hr-subtype.free_inv_x_vs_free_inv_y.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:43:26
   |
LL |               gimme::<$t2>(None::<$t1>);
   |                            ^^^^^^^^^^^ lifetime mismatch
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation
   |
   = note: expected type `std::option::Option<fn(Inv<'y>)>`
              found type `std::option::Option<fn(Inv<'x>)>`
note: the lifetime 'x as defined on the function body at 42:20...
  --> $DIR/hr-subtype.rs:42:20
   |
LL |           fn subtype<'x,'y:'x,'z:'y>() {
   |                      ^^
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation
note: ...does not necessarily outlive the lifetime 'y as defined on the function body at 42:23
  --> $DIR/hr-subtype.rs:42:23
   |
LL |           fn subtype<'x,'y:'x,'z:'y>() {
   |                         ^^
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation

error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:49:26
   |
LL |               gimme::<$t1>(None::<$t2>);
   |                            ^^^^^^^^^^^ lifetime mismatch
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation
   |
   = note: expected type `std::option::Option<fn(Inv<'x>)>`
              found type `std::option::Option<fn(Inv<'y>)>`
note: the lifetime 'x as defined on the function body at 48:22...
  --> $DIR/hr-subtype.rs:48:22
   |
LL |           fn supertype<'x,'y:'x,'z:'y>() {
   |                        ^^
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation
note: ...does not necessarily outlive the lifetime 'y as defined on the function body at 48:25
  --> $DIR/hr-subtype.rs:48:25
   |
LL |           fn supertype<'x,'y:'x,'z:'y>() {
   |                           ^^
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
